--- a/index.css
+++ b/index.css
@@ -41,5 +41,22 @@ a {
     color: #000000;
     font-size: 20px;
 }
+    cursor: pointer;
+    margin-left: 1rem;
+    font-size: x-small;
+    padding: 0.5rem;
+    background-color: #119da4;
+    margin-bottom: 0.2rem;
+
+    
+}
+
+
+
+.delete-link:hover{
+    background-color: rgb(175, 20, 20);
+    border: 1px solid rgb(175, 20, 20);
+    transition: all 300ms ease;
+}
 
 
