--- a/index.css
+++ b/index.css
@@ -1,62 +1,80 @@
 body {
-    margin: 0;
-    padding: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    min-width: 400px;
-    background-color: #aeecef;
+  margin: 0;
+  padding: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 400px;
+  background-color: #aeecef;
 }
 
 input {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    border: 1px solid #119da4;
-    margin-bottom: 4px;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid #119da4;
+  margin-bottom: 4px;
 }
 
 button {
-    background: #119da4;
-    color: white;
-    padding: 10px 20px;
-    border: 1px solid #119da4;
-    font-weight: bold;
+  background: #119da4;
+  color: white;
+  padding: 10px 20px;
+  border: 1px solid #119da4;
+  font-weight: bold;
 }
 
 #delete-btn {
-    background: rgb(10, 0, 0);
-    color: #f7f7f7;
+  background: rgb(10, 0, 0);
+  color: #f7f7f7;
 }
 
 ul {
-    margin-top: 20px;
-    list-style: none;
-    padding-left: 0;
+  margin-top: 20px;
+  list-style: none;
+  padding-left: 0;
 }
 
 li {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 a {
-    color: #000000;
-    font-size: 20px;
+  color: #000000;
+  font-size: 20px;
 }
-    cursor: pointer;
-    margin-left: 1rem;
-    font-size: x-small;
-    padding: 0.5rem;
-    background-color: #119da4;
-    margin-bottom: 0.2rem;
+cursor: pointer;
+margin-left: 1rem;
+font-size: x-small;
+padding: 0.5rem;
+background-color: #119da4;
+margin-bottom: 0.2rem;
 
-    
+.delete-link:hover {
+  background-color: rgb(175, 20, 20);
+  border: 1px solid rgb(175, 20, 20);
+  transition: all 300ms ease;
+}
+.copy-link:hover {
+  background-color: rgb(175, 20, 20);
+  border: 1px solid rgb(175, 20, 20);
+  transition: all 300ms ease;
+  cursor: pointer;
+}
+.copied {
+  background-color: #4caf50;
+  color: white;
+  animation-name: copied;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
 }
 
-
-
-.delete-link:hover{
-    background-color: rgb(175, 20, 20);
-    border: 1px solid rgb(175, 20, 20);
-    transition: all 300ms ease;
+@keyframes copied {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
-
-
